--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,21 @@
   <div class="ui container pusher">
     <h1 class="ui header">{{ title if title else "Image Tagging"}}</h1>
     <ul>
-      <li><a href="list">list</a></li>
+      <li><a href="list">list all images</a></li>
     </ul>
+    <div>
+      <h2 class="ui header">Query</h2>
+      <form class="ui form" action="/query" method="GET" name="query">
+        {% for tag in tags %}
+        <label class="unselectable" style="display:inline-block;">
+          <input type="checkbox" name="{{tag}}" title="{{tag}}">
+          {{tag}}
+        </label>
+          {% endfor %}
+          <input class="ui primary button" type="submit" value="Submit">
+          <input class="ui button" type="reset" value="Clear">
+      </form>
+    </div>
   </div>
 </body>
 
