--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <h1 class="ui header">{{ title if title else "Image Tagging"}}</h1>
     <ul>
       <li><a href="list">list all images</a></li>
+      <li><a href="stats">show statistics</a></li>
     </ul>
     <div>
       <h2 class="ui header">Query</h2>
