--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="list">list all images</a></li>
       <li><a href="stats">show statistics</a></li>
+      <li><a href="download_as_csv">download csv</a></li>
     </ul>
     <div>
       <h2 class="ui header">Query</h2>
