WIP: Update templates to non-python-dependent syntaxes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <body>
   <div class="ui container pusher">
-    <h1 class="ui header">{{ title if title else "Image Tagging"}}</h1>
+    <h1 class="ui header">Image Tagging</h1>
     <ul>
       <li><a href="list">list all images</a></li>
       <li><a href="stats">show statistics</a></li>
