--- a/templates/stats.html
+++ b/templates/stats.html
@@ -3,7 +3,7 @@
 
 <body>
   <div class="ui container pusher">
-    <h1 class="ui header">{{title}}</h1>
+    <h1 class="ui header">Image Tagging</h1>
     <div>
       <table class="ui celled table">
         <thead>
@@ -12,11 +12,11 @@
             <th>Show</th>
           </tr></thead>
         <tbody>
-          {% for key, count, url in stats %}
+          {% for item in stats %}
           <tr>
-            <td data-label="Tags">{{key if key else 'None'}}</td>
-            <td data-label="Count">{{count}}</td>
-            <td data-label="show"><a href="{{url}}" target="_blank">Go</a></td>
+            <td data-label="Tags">{{item.key}}</td>
+            <td data-label="Count">{{item.count}}</td>
+            <td data-label="show"><a href="{{item.url}}" target="_blank">Go</a></td>
           </tr>
           {% endfor %}
         </tbody>
